# worker

./: Cargo.toml  build.Dockerfile  fix-pay-as-bid.diff
.github/workflows/: build_and_test.yml  publish-docker-sidechain.yml  publish-docker-teeracle.yml  test.yml
app-libs/parentchain-interface/src/indirect_calls/: mod.rs
app-libs/stf/: Cargo.toml
app-libs/stf/poc/: Cargo.toml
app-libs/stf/poc/match-test/: Cargo.toml
app-libs/stf/poc/match-test/src/: lib.rs
app-libs/stf/poc/src/: lib.rs
app-libs/stf/src/: best_energy_helpers.rs  getter.rs  lib.rs  trusted_call.rs
app-libs/stf/src/poc/: Cargo.toml
app-libs/stf/src/poc/match-test/: Cargo.toml
app-libs/stf/src/poc/match-test/src/: lib.rs
app-libs/stf/src/poc/src/: main.rs
cli/: Cargo.toml  demo_energy_market.sh
cli/src/: lib.rs  trusted_cli.rs  trusted_operation.rs
cli/src/trusted_base_cli/: mod.rs
cli/src/trusted_base_cli/commands/: get_market_results.rs  get_person.rs  mod.rs  pay_as_bid.rs  pay_as_bid_proof.rs
docker/: demo-energy-market.yml  demo-shielding-unshielding-multiworker.yml  docker-compose.yml
