[package]
name = "match-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.147", default-features = false, features=["derive", "alloc"] }
serde_json = { version = "1.0.87", default-featues = false, features=["alloc"] }
